fix prof picture spacing

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@ nav a:hover {
   text-decoration: underline;
 }
 
+.profile,
+.profile-picture {
+  margin-top: 15px;
+}
+
 @media (max-width: 949px) {
   .main-content {
     padding: 5px;
@@ -120,7 +125,15 @@ nav a:hover {
     padding: 12px;
   }
 
+  .profile {
+    width: 60%;
+    display: inline-block;
+    float: left;
+  }
+
   .profile-picture {
+    width: 40%;
+    display: inline-block;
     float: right;
   }
 
@@ -163,7 +176,7 @@ nav a:hover {
 
 .main-content {
   position: relative;
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.8);
   overflow-y: hidden;
   overflow-x: hidden;
 }
@@ -183,6 +196,10 @@ nav a:hover {
 
 .profile p {
   line-height: 25px;
+}
+
+.profile p:first-child {
+  margin-top: 0;
 }
 
 .profile-picture {
